--- a/D_Z_3_3.html
+++ b/D_Z_3_3.html
@@ -25,7 +25,7 @@
            
             <td style="padding-top:50px; ">&#169; 2005 Lorem <br>
             Lorem, ipsum dolor.<br>
-        Тедефон:(+7095)933-74-50</td>
+        Телефон:<a href="tel:+70959337450">  (+7095)933-74-50</a></td>
         </tr>
     </table>
 </body>
